<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#FFF"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:text="@string/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <TextView
            android:text="@string/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <TextView
            android:text="@string/event_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/eventHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <TextView
            android:text="@string/event_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_weight="0.31">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_show"
                android:id="@+id/optionShow" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_theater"
                android:id="@+id/optionTheater"
                android:checked="false"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/optionCinema"
                android:layout_toEndOf="@+id/optionCinema" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_cinema"
                android:id="@+id/optionCinema"
                android:checked="false"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/optionExposition"
                android:layout_toEndOf="@+id/optionExposition" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_party"
                android:id="@+id/optionParty"
                android:checked="false"
                android:layout_below="@+id/optionTheater" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_museum"
                android:id="@+id/optionMuseum"
                android:checked="false"
                android:layout_below="@+id/optionCinema"
                android:layout_toRightOf="@+id/optionExposition"
                android:layout_toEndOf="@+id/optionExposition" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_education"
                android:id="@+id/optionEducation"
                android:checked="false"
                android:layout_below="@+id/optionCinema"
                android:layout_alignLeft="@+id/optionExposition"
                android:layout_alignStart="@+id/optionExposition" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_exposition"
                android:id="@+id/optionExposition"
                android:checked="false"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/optionParty"
                android:layout_toEndOf="@+id/optionParty" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sport"
                android:id="@+id/optionSports"
                android:checked="false"
                android:layout_below="@+id/optionTheater"
                android:layout_alignLeft="@+id/optionTheater"
                android:layout_alignStart="@+id/optionTheater" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_others"
                android:id="@+id/optionOthers"
                android:checked="false"
                android:layout_below="@+id/optionParty"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <TextView
            android:text="@string/event_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.63"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_symbol"
                android:id="@+id/textView10"
                android:layout_weight="0.13" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/eventPriceReal"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/comma"
                android:id="@+id/textView9" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/eventPriceDecimal"
                android:inputType="number"/>
        </LinearLayout>

        <TextView
            android:text="@string/event_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/eventAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <TextView
            android:text="@string/event_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/eventLocal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:singleLine="true"
            android:text="@string/select_event_local"
            android:textColor="@color/DarkCyan"
            android:background="@drawable/button_border"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:text="@string/event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/eventDescription" />

        <Button
            android:id="@+id/saveEvent"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:textColor="#FFFFFF"
            android:background="#00C0C3"
            android:text="@string/register" />

    </LinearLayout>
    </ScrollView>