...
    <string name="title_activity_update">UpdateActivity</string>
    <string name="empty_string"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Open navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_login">Login</string>
    <string name="username">Username</string>
    <string name="dateTag">Birthday:</string>
    <string name="email">E-mail:</string>
    <string name="emailConfirmation">E-mail confirmation:</string>
    <string name="passwordConfirmation">Password confirmation:</string>
    <string name="edit">Edit</string>
...
    <string name="comma">,</string>
    <string name="event_registered_with_success">Event registered with success :)</string>
    <string name="successfully_update_message">Successfully changed event :)</string>
    <string name="event_local">Local do Evento</string>
    <string name="select_event_local">Selecionar Local do Evento</string>
    <string name="register">Cadastrar</string>
    <string name="change">Alterar</string>
    <string name="remove">Remover</string>
    <string name="no_results">Sem resultados</string>
    <string name="no_user_found">Nenhum usuário foi encontrado :(</string>
    <string name="search">Pesquisar</string>
    <string name="no_recommended_events">Sem eventos recomendados!</string>
    <string name="no_event_created">Sem eventos criados!</string>
...
    <string name="go">#EUVOU</string>
    <string name="places_ranking">Ranking de lugares</string>
    <string name="recommended_events">Eventos Recomendados</string>
    <string name="edit_register">Alterar cadastro</string>
    <string name="create_event">Cadastrar evento</string>
    <string name="settings">Configurações</string>
    <string name="my_events">Meus Eventos</string>
    <string name="logout">Sair</string>
</resources>

