...
        android:textColor="#000000"
        android:textSize="20dp"/>

    <Button
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:id="@+id/editRemoveButton"
        android:textColor="#FFF"
        android:text="Alterar ou Remover este evento"
        android:layout_gravity="center_horizontal"
        android:background="@color/turquesa_app" />
</LinearLayout>
